Fix to assure gap for new paragraph preceded by code highlight

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -163,6 +163,10 @@ strong code {
   display: grid;
 }
 
+.post-content>.highlight + p {
+  margin-top: var(--content-gap);
+}
+
 /* Header */
 .header {
   background-color: var(--header);
